# multimodal-search

./: .env.example  .gitignore  Dockerfile  MCP.md  README.md  config.py  docker-compose.yml  index.html  mcp_server.py  pyproject.toml
.zed/: debug.json
multimodal-search/: config.py  main.py  models.py
multimodal-search/pipeline/: chunker.py  embed.py  generate_metadata.py  ingest.py  prepare_documents.py
multimodal-search/search/: index.py  search.py
multimodal-search/storage/: __init__.py  file_system_service.py  remote_storage_service.py  storage_router.py
multimodal_search/: config.py  main.py  models.py  utilities.py
multimodal_search/pipeline/: _retry.py  chunker.py  downloader.py  embed.py  generate_metadata.py  ingest.py  prepare_documents.py  scene_detect.py  transcribe.py
multimodal_search/search/: index.py  indexer.py  search.py
multimodal_search/storage/: __init__.py  file_system_service.py  remote_storage_service.py  storage_router.py
semantic-multimodal/: config.py  main.py  models.py  utilities.py
semantic-multimodal/opensearch/: index.py
semantic-multimodal/pipeline/: chunker.py  embed.py  generate_metadata.py  ingest.py  metadata_enricher.py  prepare_documents.py  scene_detect.py  transcribe.py
semantic-multimodal/storage/: __init__.py  file_system_service.py  remote_storage_service.py  vector_store.py
