[project]
name = "semantic-multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # API
    fastapi==0.115.5
    uvicorn[standard]==0.32.1
    python-multipart==0.0.12
    httpx==0.27.2
    aiofiles==24.1.0

    # Google AI
    google-genai==1.5.0

    # Vector DB
    qdrant-client==1.12.1

    # Scene detection & video processing
    scenedetect[opencv]==0.6.4
    opencv-python-headless==4.10.0.84

    # Transcription
    openai-whisper==20240930
    torch==2.5.1         # CPU wheels are fine for whisper/base
    torchaudio==2.5.1

    # Config & utilities
    pydantic-settings==2.6.1
    python-dotenv==1.0.1
    structlog==24.4.0

    # Progress / async helpers
    tqdm==4.67.0
    anyio==4.6.2
]
